--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       }
 
       #projects {
-        
+        min-height: 60vh;
+        padding-top: 40vh;
       }
       #project-grid {
         display: grid;
