--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>My Projects</h1>
       <a href="Weather.html">Weather</a><br>
       <a href="https://github.com/andrewlin94/" target="_blank">GitHub for other projects</a><br>
-      <a href="https://www.freecodecamp.org/linejun/" target="_blank">FreeCodeCamp profile</a>
+      <a href="https://www.freecodecamp.org/andrewlin94/" target="_blank">FreeCodeCamp profile</a>
     </div>
   </section>
   <section id="contact">
