Some table formatting

--- a/Weather.html
+++ b/Weather.html
@@ -37,7 +37,7 @@
       <td class="currentWeather">Longitude:</td><td class="currentData"><output type="number" id="longitude"></output></td>
     </tr>
   </table>
-  <img class="weatherImage">
+  <img class="weatherImage" src="">
   <button onclick=getWeather()>Get Weather</button>
   <!-- <button onclick=removeSelect()>Remove</button> -->
 </html>
