Added some info

--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
   </head>
 
   <nav id="navbar">
-    <a class="nav-link" href="#welcome-section">About</a>
+    <a class="nav-link" href="#about-me">About</a>
     <a class="nav-link" href="#projects">Projects</a>
     <a class="nav-link" href="#contact">Contact</a>
   </nav>
   <section id="welcome-section">
+    <h1>Welcome to my site!</h1>
+  </section>
+  <section id="about-me">
     <h1>Andrew Lin</h1>
-    <p>New graduate from McGill University in Electrical Engineering with a minor in Software. Interest in Software Development.</p>
+    <p>I graduated from McGill University with a bachelor in Electrical Engineering, with a minor in software engineer.</p>
   </section>
   <section id="projects">
     <h1>My Projects</h1>
-      <a href="Weather.html">Weather</a><br>
-      <a href="https://github.com/andrewlin94/" target="_blank">GitHub for other projects</a><br>
-      <a href="https://www.freecodecamp.org/andrewlin94/" target="_blank">FreeCodeCamp profile</a>
-    </div>
+    <p>
+      <a href="Weather.html" target="_blank">Weather</a><br>
+      A simple weather app that I made using <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap</a>'s API. 
+      <!-- They also provide a list of cities in JSON format; however, the cities only contain an ISO-3166 country code. Using the list provided <a href="https://github.com/lukes/ISO-3166-Countries-with-Regional-Codes" target="_blank">here</a>, I made the dropdown list to show the full name of the country. -->
+    </p>
+    <p>
+      <a href="https://github.com/andrewlin94/" target="_blank">GitHub</a><br>
+      My GitHub page. Most repositories were for acedemic projects.
+    </p>
+    <p>
+      <a href="https://www.freecodecamp.org/andrewlin94/" target="_blank">FreeCodeCamp</a><br>
+      My FreeCodeCamp profile. Shows a list of challenges I completed.
+    </p>
+      
   </section>
   <section id="contact">
     <h1>Contact information</h1>
-    <a href="mailto:andrew.lin2@mail.mcgill.ca">Email</a>
+    <a href="mailto:andrew.lin2@mail.mcgill.ca">Email</a><br>
+    <a href="https://linkedin.com/in/andrew-lin-35960a180/" target="_blank">LinkedIn</a>
   </section>
 </html>
